# production-ready-data-science-code

./: README.md  chapter10_data_validation.ipynb  example_match_book.md  pyproject.toml  report.md
.claude/: CLAUDE.md
chapter10_data_validation/: README.md  chapter10_data_validation.ipynb
chapter10_data_validation/01_basic_validation/: README.md
chapter11_data_version_control/: README.md
chapter12_continuous_integration/: README.md
chapter12_continuous_integration/01_basic_ci/: README.md
chapter12_continuous_integration/02_data_pipeline/: README.md
chapter12_continuous_integration/03_generate_report/: README.md
chapter12_continuous_integration/04_job_dependencies/: README.md
chapter13_package_your_project/: README.md
chapter14_notebooks_in_production/: README.md
chapter14_notebooks_in_production/01_basic_marimo_notebook/: README.md
chapter14_notebooks_in_production/02_dependency_tracking/: README.md
chapter14_notebooks_in_production/03_data_analysis_workflow/: README.md
chapter14_notebooks_in_production/04_testing_notebook/: README.md
chapter14_notebooks_in_production/05_variable_redefinition_error/: README.md
chapter1_version_control/: .gitignore  README.md  process.py
chapter2_dependency_management/: README.md
chapter2_dependency_management/01_virtual_environments/: README.md
chapter2_dependency_management/02_version_ranges/: README.md
chapter2_dependency_management/03_dev_prod_separation/: README.md
chapter2_dependency_management/04_uv_basics/: README.md
chapter3_modules_packages/: README.md
chapter3_modules_packages/01_basic_modules/: README.md
chapter3_modules_packages/02_modular_design/: README.md
chapter3_modules_packages/03_import_practices/: README.md
chapter3_modules_packages/04_main_blocks/: README.md
chapter3_modules_packages/05_circular_imports/: README.md
chapter3_modules_packages/06_project_structure/: README.md
chapter4_variables/: README.md
chapter4_variables/01_basic_variables/: README.md
chapter5_functions/: README.md
chapter5_functions/01_basic_functions/: README.md
chapter6_classes/: README.md
chapter6_classes/01_basic_classes/: README.md
chapter7_unit_testing/: README.md
chapter7_unit_testing/01_basic_testing/: README.md
chapter7_unit_testing/02_parametrization/: README.md
chapter7_unit_testing/03_fixtures/: README.md
chapter7_unit_testing/04_edge_cases/: README.md
chapter7_unit_testing/05_mocking/: README.md  data_fetcher.py
chapter7_unit_testing/06_test_organization/: README.md
chapter8_configuration_management/: README.md
chapter8_configuration_management/01_basic_hydra_config/: README.md
chapter8_configuration_management/02_interpolation/: README.md
chapter9_logging/: README.md
(+41 files in other folders)
